--- a/BuddhaBowls/UserControls/BreakdownCategory.xaml
+++ b/BuddhaBowls/UserControls/BreakdownCategory.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="BuddhaBowls.BreakdownCategory"
+﻿<UserControl x:Class="BuddhaBowls.UserControls.BreakdownCategory"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:BuddhaBowls"
+             xmlns:local="clr-namespace:BuddhaBowls.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
