--- a/BuddhaBowls/UserControls/EditItem.xaml
+++ b/BuddhaBowls/UserControls/EditItem.xaml
@@ -6,7 +6,7 @@
              xmlns:parent="clr-namespace:BuddhaBowls"
              xmlns:local="clr-namespace:BuddhaBowls.UserControls"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="500" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="60" />
@@ -24,16 +24,21 @@
                                 <ColumnDefinition Width="1*"></ColumnDefinition>
                                 <ColumnDefinition Width="2*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
-                            <Label Grid.Column="0" Content="{Binding Name}" Margin="0, 10, 0, 0" HorizontalAlignment="Right" VerticalAlignment="Center" HorizontalContentAlignment="Right" Height="28"/>
-                            <TextBox Grid.Column="1" Text="{Binding Value}" Margin="0, 20, 0, 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" Height="28" TextChanged="FieldValue_TextChanged" />
+                            <Label Grid.Column="0" Content="{Binding Name}" Margin="0, 10, 0, 0" HorizontalAlignment="Right" VerticalAlignment="Center"
+                                   HorizontalContentAlignment="Right" Height="28"/>
+                            <TextBox Grid.Column="1" Text="{Binding Value}" Margin="0, 20, 0, 0" HorizontalAlignment="Left" VerticalAlignment="Center"
+                                     Width="200" Height="28" TextChanged="FieldValue_TextChanged" />
                             <Border Grid.Column="1" BorderThickness="{Binding Error}"  BorderBrush="Red" Margin="0, 20, 0, 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" Height="28" />
                         </Grid>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
         </ScrollViewer>
-        <Button x:Name="button" Grid.Row="2" Content="Save" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0, 0, 85, 0" Width="75" Command="{Binding SaveAddEditCommand}" />
-        <Button x:Name="button1" Grid.Row="2" Content="Cancel" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0, 0, 5, 0" Width="75" Command="{Binding CancelAddEditCommand}" />
-        <Label x:Name="label" Grid.Row="2" Content="{Binding AddEditErrorMessage}" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,0,0,0" Width="250" Height="25" Foreground="Red" />
+        <Button x:Name="button" Grid.Row="2" Content="Save" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0, 0, 85, 0" Width="75"
+                Command="{Binding SaveAddEditCommand}" />
+        <Button x:Name="button1" Grid.Row="2" Content="Cancel" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0, 0, 5, 0" Width="75"
+                Command="{Binding CancelAddEditCommand}" />
+        <Label x:Name="label" Grid.Row="2" Content="{Binding AddEditErrorMessage}" HorizontalAlignment="Left" VerticalAlignment="Center"
+               Margin="5,0,0,0" Width="250" Height="25" Foreground="Red" />
     </Grid>
 </UserControl>
