--- a/BuddhaBowls/UserControls/VendorTabControl.xaml
+++ b/BuddhaBowls/UserControls/VendorTabControl.xaml
@@ -35,7 +35,8 @@
                               SelectedItem="{Binding SelectedVendor}" AutoGenerateColumns="False"
                               CellEditEnding="VendorList_CellEditEnding" CanUserAddRows="False">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="2*"/>
+                <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="1*"/>
+                <DataGridTextColumn Header="Contact" Binding="{Binding Name}" Width="1*"/>
                 <DataGridTextColumn Header="Email" Binding="{Binding Email}" Width="1*"/>
                 <DataGridTextColumn Header="Phone #" Binding="{Binding PhoneNumber}" Width="1*" />
             </DataGrid.Columns>
